--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
+  <link rel="shortcut icon" href="img/favicon.ico">
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>John Doe - Business Administration</title>
+  <title>Phillip Pham - Business Finace</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Phillip Pham</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/phillipham.png" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,47 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Phillip Pham
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Business Finace📈</div>
+        <p class="lead mb-4">Phillip was borned in Ho Chi Minh City, Viet Nam and grew up in the Long An province. 
+        It was when he turned 6 that he immigrated to California and has lived there since. Attending school in 
+        the United States, he would go on to have perfect attendance and to earn many honor roll awards for his
+        excellent performance at school. <br><br>
 
-        Enter bio here<br><br>
+        During his freshman year in high school, he joined his school’s tutoring program and became a tutor. 
+        The following year he was promoted to a head tutor in the tutoring program. He would spend up to 6 
+        hours a week tutoring students in help. Here he holds responsibility of not only tutoring other 
+        students, but also mentor other tutors so they can be head tutors as well. He would typically 
+        spend time during lunch hours helping set up head member meetings. Phillip stayed in the tutoring 
+        program until 2019, where he graduated high school.<br><br>
 
-        Enter bio here
+        In Sophomore year he joined the robotics club and helped the team build the club’s first ever robot.
+        Phillip contributed to the club’s division in charge of planning and constructing the robot. He and 
+        the group stayed hours after school learning about the mechanical and electrical ins and outs of the
+        robot. It wasn’t until junior year when the team finally competed in their first ever FIRST competition
+        and won 8th place. This victory was a team effort between Phillip and everyone in the club. Of course this
+        was done with countless days of development together.<br><br>
+        
+        During his junior year, Phillip would also join Key Club and participated in many of the events the club has 
+        to offer. While the events were just just simple volunteering, he had fun partaking in these activities with
+        his friends and even made new friends during his time as a member. 35 West was the division he was in and was
+        proud to be a seal. During his stay, he has picked up trash for his community, packed food for the homeless, 
+        walked in the AIDs walk, and many more. One of the events he loved the most was the Pumpkin Run, where he ran
+        and jogged with a participant. While out of breath, he would try to keep up with the runner and listened to his
+        story of tragedy and why the run ment for him. Another memorable event for Phillip was the Spring Rally, where 
+        divisions across California, Nevada, and even Hawaii would meet up at Six Flags and compete for the “Spirit Stick.” 
+        To even have permission to attend the event, a threshold of volunteer hours needed to be met. Unfortunately, Division
+        35 West never won during Phillip’s stay at Key Club.<br><br>
         </p>
         <div class="social-icons">
-          <a target="_blank" href="https://linkedin.com">
+          <a target="_blank" href="https://www.linkedin.com/in/phillip-pham-890154192/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" href="https://github.com">
+          <a target="_blank" href="https://github.com/ppham054">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" href="https://twitter.com">
-            <i class="fab fa-twitter"></i>
-          </a>
-          <a target="_blank" href="mailto:youremail@gmail.com">
+          <a target="_blank" href="mailto:phillipphaml1227@gmail.com">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +113,45 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://mulesoft.com">Company</a></div>
+            <h3 class="mb-0">Tutor</h3>
+            <div class="subheading mb-3"><a target="_blank" href="">Sierra Vista High School</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Helped Students who needed help on homework<br> 
+              • Occasionally make "mini-lessons" <br>
+              • Am experienced with making sechudals for other tutors<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">October 2016 - May 2019</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://pubnub.com">Whole Foods</a></div>
+            <h3 class="mb-0">Tennis Manager</h3>
+            <div class="subheading mb-3"><a target="_blank" href="">Sierra Vista High School</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Keep track of scores, equipments, and players<br>
+              • Can referee<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">Janurary 2019 - April 2019</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Key Club</h3>
+            <div class="subheading mb-3"><a target="_blank" href="">Sierra Vista High School</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
-
+            • Volunteering work<br>
+            • Many events like picking up trash, packing food for the homeless, and handing water during a marathon<br>
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">September 2017 - June 2017</span>
           </div>
         </div>
 
@@ -149,36 +167,14 @@
       <div class="w-100">
         <h2 class="mb-5">Education</h2>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
             <h3 class="mb-0">University of California Riverside</h3>
             <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
+            <div>Fiance</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">August 2019 - May 2023</span>
           </div>
         </div>
 
@@ -191,7 +187,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/event 1.jpg" width="500px">
+            <img src="img/event 2.jpg" width="500px"> <br><br>
+            <img src="img/event 3.jpg" width="500px">
+            <img src="img/event 4.jpg" width="500px">
         </center>
       </div>
     </section>
@@ -199,7 +198,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Phillip Pham</center><br>
 
 
   </div>
